# history_of_mexico_webscraper

./: Untitled.ipynb  pyproject.toml
history_of_mexico_webscraper/: exports.py
history_of_mexico_webscraper/.ipynb_checkpoints/: scraper-checkpoint.ipynb
tests/: tests.ipynb
