[tool.poetry]
name = "history-of-mexico-webscraper"
version = "0.1.0"
description = ""
authors = ["Lee-Roy King <leeroywking@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
beautifulsoup4 = "^4.9.1"
jupyter = "^1.0.0"
jupyterlab = "^2.2.0"
requests = "^2.24.0"
ipytest = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
